tests/ui/errors/snapshots/parse_receiver_mut_marker_rejected.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:5:11]
 4 │ impl Counter {
 5 │   fn bump(mut self) {
   ·           ─┬─
   ·            ╰── `mut` goes on the parameter's type
 6 │     let _ = self
   ╰────
  help: Place the permission right before the type, as in `items: mut Slice<int>`, or rebind with `let mut` inside the body for a local copy · code: [parse.syntax_error]
