tests/ui/errors/snapshots/parse_regular_enum_with_underlying_type.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Enum with underlying type
   ╭─[test.lis:2:12]
 1 │ 
 2 │ enum Status: int {
   ·            ┬
   ·            ╰── enums cannot have an underlying type
 3 │   Active,
   ╰────
  help: Remove the `: type` annotation. To model a Go defined primitive type, use a named primitive type such as `pub struct Weekday(int)` with package-level constants · code: [parse.enum_underlying_type]
