tests/ui/errors/snapshots/parse_rust_ref_self.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:5:16]
 4 │ impl Counter {
 5 │   fn get_count(&self) -> int {
   ·                ──┬──
   ·                  ╰── invalid syntax
 6 │     self.count
   ╰────
  help: A read-only receiver is `self: Ref<T>`, where `T` is the type this `impl` targets. For a copy, use `self` · code: [parse.syntax_error]
